# EMS_Copilot

./: .dockerignore  .gitignore  Makefile  azure_tts_demo.py  docker-compose.yml  google_hd_tts_demo.py  google_tts_rest.py  readme.md  requirements.txt  requirements_local.txt  run_server.py  start.ps1
backend/: app.py  class Gemini:.py.py  demo_enhanced_history.py  pyproject.toml  readme.md  sandbox.ipynb  test.py  test_conversation_restored.py  test_simple_conversation.py  test_simplified_conversation.py  test_triage.py
backend/agents/: base_agent.py  chroma_agent.py  gps_agent.py  openai_agent.py  orchestrator_agent.py  sql_agent.py  vitals_agent.py
backend/db/: firestore_db.py
backend/dev/: sandbox.ipynb  test_import.py
backend/src/ems_copilot/domain/models/: __init__.py  agent_response.py
backend/src/ems_copilot/domain/services/: base_agent.py  gps_agent.py  orchestrator_agent.py  triage_agent.py  vitals_agent.py
backend/src/ems_copilot/infrastructure/api/: main.py
backend/src/ems_copilot/infrastructure/database/: conversation_history.py  firestore_db.py
backend/src/ems_copilot/infrastructure/utils/: general_utils.py
backend/utils/: tts_util.py
conversation_history/: chroma.sqlite3
docker/: Dockerfile
frontend/: README.md  streamlit_app.py  streamlit_requirements.txt  test_frontend.html  test_frontend_with_tts.html
