[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ems-copilot"
version = "0.1.0"
description = "EMS Copilot - Emergency Medical Services Assistant"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "python-dotenv>=0.19.0",
    "sqlalchemy>=1.4.0",
    "pytest>=6.0.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "mypy>=0.910",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "mypy>=0.910",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 